[package]
name = "two-plz"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
thiserror = "2.0.16"
tokio-util = { version = "0.7.16", features = ["codec", "io"] }
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
slab = "0.4.11"
indexmap = { version = "2.11.3", features = ["std"] }
tracing = "0.1.41"
http = "1.3.1"
fnv = "1.0.7"
futures-core = "0.3.31"
futures-sink = "0.3.31"

[dev-dependencies]
openssl = "0.10.73"
rcgen = { version = "0.13.2", features = ["pem", "x509-parser"] }
rustls = "0.23.31"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
tokio-rustls = "0.26.2"
webpki-roots = "1.0.2"
x509-parser = "0.18.0"
tracing-subscriber = "0.3.20"
tests-utils = { path = "tests-utils" }
two-plz = { path = ".", features = ["test-meth"] }


[features]
test-meth = []
