[package]
name = "two-plz"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "tests/two-tests",
    "tests/support",
]

[dependencies]
bytes = "1.11.0"
fnv = "1.0.7"
futures = "0.3.31"
futures-core = "0.3.31"
futures-sink = "0.3.31"
header-plz = "0.0.44"
indexmap = { version = "2.12.1", features = ["std"] }
slab = "0.4.11"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec", "io"] }
tracing = "0.1.43"
http-plz = "0.0.4"

[dev-dependencies]
env_logger = { version = "0.11", default-features = false }

# Fuzzing
quickcheck = { version = "1.0.3", default-features = false }
rand = "0.9"

# HPACK fixtures
hex = "0.4.3"
walkdir = "2.5.0"
serde = "1.0.0"
serde_json = "1.0.0"

openssl = "0.10.73"
rcgen = { version = "0.13.2", features = ["pem", "x509-parser"] }
rustls = "0.23.31"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
tokio-rustls = "0.26.2"
webpki-roots = "1.0.2"
x509-parser = "0.18.0"
tracing-subscriber = "0.3.20"

[features]
# Enables `futures::Stream` implementations for various types.
stream = []

# Enables **unstable** APIs. Any API exposed by this feature has no backwards
# compatibility guarantees. In other words, you should not use this feature for
# anything besides experimentation. Definitely **do not** publish a crate that
# depends on this feature.
unstable = []
test-util = []
