[package]
name = "support"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
atty = "0.2"
bytes = "1.11.1"
futures = { version = "0.3", default-features = false }
header-plz = "0.0.44"
http-plz = "0.0.4"
tokio = { version = "1", features = ["time"] }
tokio-test = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
tracing-tree = "0.4.1"
two-plz = { path = "../..", features = ["stream", "unstable"] }
